--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -284,7 +284,12 @@
       "updateStaticPageFailed": "Failed to update static page",
       "deleteStaticPageFailed": "Failed to delete static page",
       "reorderFailed": "Failed to reorder",
-      "cannotDropOnChild": "Cannot drop a category on its own child"
+      "cannotDropOnChild": "Cannot drop a category on its own child",
+      "categoryNotFound": "Category not found",
+      "invalidCategoryIds": "Invalid category IDs",
+      "categoriesNotFound": "Some categories not found or don't belong to tenant",
+      "parentCategoriesNotFound": "Some parent categories not found or don't belong to tenant",
+      "oneOrMoreCategoriesNotFound": "One or more categories not found during update"
     },
     "validation": {
       "hungarianNameRequired": "Hungarian name is required",
@@ -405,8 +410,27 @@
       "updateStaticPageFailed": "Failed to update static page",
       "deleteStaticPageFailed": "Failed to delete static page",
       "reorderFailed": "Failed to reorder",
-      "cannotDropOnChild": "Cannot drop a category on its own child"
+      "cannotDropOnChild": "Cannot drop a category on its own child",
+      "categoryNotFound": "Category not found",
+      "invalidCategoryIds": "Invalid category IDs"
     }
+  },
+  "error": {
+    "pageNotFound": "Page Not Found",
+    "pageNotFoundDescription": "The page you are looking for does not exist or has been removed.",
+    "errorOccurred": "An Error Occurred",
+    "unknownError": "Unknown error",
+    "badRequest": "Bad Request",
+    "unauthorized": "Unauthorized",
+    "forbidden": "Forbidden",
+    "notFound": "Not Found",
+    "internalServerError": "Internal Server Error",
+    "badGateway": "Bad Gateway",
+    "serviceUnavailable": "Service Unavailable",
+    "goHome": "Go Home",
+    "goBack": "Go Back",
+    "reload": "Reload Page",
+    "errorDetails": "Error Details"
   },
   "validation": {
     "required": "Required field",
