--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -140,7 +140,7 @@
     "username": "Benutzername",
     "email": "E-Mail",
     "role": "Rolle",
-    "noTenants": "Keine Mieter verfügbar",
+    "noTenants": "Keine Gebiete verfügbar",
     "sessionExpiring": "Sitzung läuft ab",
     "defaultLanguage": "Standardsprache",
     "defaultLanguageDescription": "Diese Sprache wird die Standardsprache für sowohl die öffentliche als auch die Admin-Oberfläche sein.",
@@ -154,7 +154,7 @@
     "mapZoom": "Zoomstufe",
     "mapZoomHint": "1 = kleinste (Weltkarte), 20 = größte (Straßenebene). Empfohlen: 10-15.",
     "singleTownHighZoomHint": "Für eine einzelne Stadt wird ein höherer Zoom (14-16) empfohlen, damit sich die Marker nicht überlappen.",
-    "singleTenantMapSettingsDisabled": "Für einen einzelnen Mieter werden die Karteneinstellungen automatisch basierend auf den Mieterdaten konfiguriert.",
+    "singleTenantMapSettingsDisabled": "Für ein einzelnes Gebiet werden die Karteneinstellungen automatisch basierend auf den Gebietsdaten konfiguriert.",
     "mapSettingsUpdated": "Karteneinstellungen aktualisiert.",
     "siteSettings": "Seiteneinstellungen",
     "siteSettingsDescription": "Konfigurieren Sie den Seitennamen, die Beschreibung und die Standard-SEO-Einstellungen.",
@@ -206,8 +206,8 @@
       "editLegalPage": "Rechtliche Seite bearbeiten",
       "newUser": "Neuer Benutzer",
       "editUser": "Benutzer bearbeiten",
-      "newTenant": "Neuer Mieter",
-      "editTenant": "Mieter bearbeiten",
+      "newTenant": "Neues Gebiet",
+      "editTenant": "Gebiet bearbeiten",
       "newEvent": "Neue Veranstaltung",
       "editEvent": "Veranstaltung bearbeiten",
       "newStaticPage": "Neue statische Seite",
@@ -220,7 +220,7 @@
       "status": "Status",
       "actions": "Aktionen",
       "noData": "Keine Daten gefunden",
-      "pleaseSelectTenant": "Bitte wählen Sie einen Mieter"
+      "pleaseSelectTenant": "Bitte wählen Sie ein Gebiet"
     },
     "published": "Veröffentlicht",
     "isCrawlable": "Suchmaschinen dürfen die Website durchsuchen",
@@ -265,10 +265,10 @@
       "createUserFailed": "Benutzer konnte nicht erstellt werden",
       "updateUserFailed": "Benutzer konnte nicht aktualisiert werden",
       "deleteUserFailed": "Benutzer konnte nicht gelöscht werden",
-      "loadTenantsFailed": "Mieter konnten nicht geladen werden",
-      "createTenantFailed": "Mieter konnte nicht erstellt werden",
-      "updateTenantFailed": "Mieter konnte nicht aktualisiert werden",
-      "deleteTenantFailed": "Mieter konnte nicht gelöscht werden",
+      "loadTenantsFailed": "Gebiete konnten nicht geladen werden",
+      "createTenantFailed": "Gebiet konnte nicht erstellt werden",
+      "updateTenantFailed": "Gebiet konnte nicht aktualisiert werden",
+      "deleteTenantFailed": "Gebiet konnte nicht gelöscht werden",
       "loadDefaultLanguageFailed": "Standardsprache konnte nicht geladen werden",
       "updateDefaultLanguageFailed": "Standardsprache konnte nicht aktualisiert werden",
       "updateMapSettingsFailed": "Fehler beim Aktualisieren der Karteneinstellungen",
@@ -288,8 +288,8 @@
       "cannotDropOnChild": "Eine Kategorie kann nicht auf ihr eigenes Kind gezogen werden",
       "categoryNotFound": "Kategorie nicht gefunden",
       "invalidCategoryIds": "Ungültige Kategorie-IDs",
-      "categoriesNotFound": "Einige Kategorien wurden nicht gefunden oder gehören nicht zum Mandanten",
-      "parentCategoriesNotFound": "Einige übergeordnete Kategorien wurden nicht gefunden oder gehören nicht zum Mandanten",
+      "categoriesNotFound": "Einige Kategorien wurden nicht gefunden oder gehören nicht zum Gebiet",
+      "parentCategoriesNotFound": "Einige übergeordnete Kategorien wurden nicht gefunden oder gehören nicht zum Gebiet",
       "oneOrMoreCategoriesNotFound": "Eine oder mehrere Kategorien wurden während der Aktualisierung nicht gefunden"
     },
     "validation": {
@@ -301,8 +301,8 @@
       "lastNameRequired": "Nachname ist erforderlich",
       "passwordRequired": "Passwort ist erforderlich",
       "passwordMinLength": "Passwort muss mindestens 6 Zeichen lang sein",
-      "tenantNameRequired": "Mieter-Name ist erforderlich",
-      "tenantSlugRequired": "Mieter-Slug ist erforderlich",
+      "tenantNameRequired": "Gebiets-Name ist erforderlich",
+      "tenantSlugRequired": "Gebiets-Slug ist erforderlich",
       "slugRequired": "Slug ist erforderlich",
       "categoryRequired": "Kategorie ist erforderlich",
       "startDateRequired": "Startdatum ist erforderlich",
@@ -316,7 +316,7 @@
       "deleteTown": "Möchten Sie diese Stadt wirklich löschen?",
       "deleteLegalPage": "Möchten Sie diese rechtliche Seite wirklich löschen?",
       "deleteUser": "Möchten Sie diesen Benutzer wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
-      "deleteTenant": "Möchten Sie diesen Mieter wirklich löschen?",
+      "deleteTenant": "Möchten Sie dieses Gebiet wirklich löschen?",
       "changeRole": "Möchten Sie die Rolle dieses Benutzers wirklich auf {{role}} ändern?",
       "deleteStaticPage": "Möchten Sie diese statische Seite wirklich löschen?",
       "deleteEvent": "Möchten Sie diese Veranstaltung wirklich löschen?",
@@ -327,12 +327,12 @@
       "lastName": "Nachname",
       "bio": "Bio",
       "password": "Passwort",
-      "tenantSlug": "Mieter-Slug",
-      "tenantName": "Mieter-Name"
+      "tenantSlug": "Gebiets-Slug",
+      "tenantName": "Gebiets-Name"
     },
     "key": "Schlüssel",
     "content": "Inhalt",
-    "selectTenantFirst": "Bitte wählen Sie zuerst einen Mieter",
+    "selectTenantFirst": "Bitte wählen Sie zuerst ein Gebiet",
     "shortDescriptionPlaceholder": "Kurze Beschreibung der Veranstaltung",
     "startDate": "Startdatum",
     "endDate": "Enddatum",
@@ -391,7 +391,7 @@
       "profileUpdatedSuccess": "Profil erfolgreich aktualisiert!",
       "memberSince": "Mitglied seit",
       "lastUpdated": "Zuletzt aktualisiert",
-      "noTenantsAssigned": "Keine Mieter zugewiesen",
+      "noTenantsAssigned": "Keine Gebiete zugewiesen",
       "primary": "Primär",
       "twoFactorAuthentication": "Zwei-Faktor-Authentifizierung"
     },
