--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -140,7 +140,7 @@
     "username": "Username",
     "email": "Email",
     "role": "Role",
-    "noTenants": "No tenants available",
+    "noTenants": "No regions available",
     "sessionExpiring": "Session expiring",
     "defaultLanguage": "Default Language",
     "defaultLanguageDescription": "This language will be the default for both the public and admin interfaces.",
@@ -154,7 +154,7 @@
     "mapZoom": "Zoom Level",
     "mapZoomHint": "1 = smallest (world map), 20 = largest (street level). Recommended: 10-15.",
     "singleTownHighZoomHint": "For a single town, higher zoom (14-16) is recommended so markers don't overlap.",
-    "singleTenantMapSettingsDisabled": "For a single tenant, map settings are automatically configured based on tenant data.",
+    "singleTenantMapSettingsDisabled": "For a single region, map settings are automatically configured based on region data.",
     "mapSettingsUpdated": "Map settings updated.",
     "siteSettings": "Site Settings",
     "siteSettingsDescription": "Configure the site name, description, and default SEO settings.",
@@ -206,8 +206,8 @@
       "editLegalPage": "Edit Legal Page",
       "newUser": "New User",
       "editUser": "Edit User",
-      "newTenant": "New Tenant",
-      "editTenant": "Edit Tenant",
+      "newTenant": "New Region",
+      "editTenant": "Edit Region",
       "newEvent": "New Event",
       "editEvent": "Edit Event",
       "newStaticPage": "New Static Page",
@@ -220,7 +220,7 @@
       "status": "Status",
       "actions": "Actions",
       "noData": "No data found",
-      "pleaseSelectTenant": "Please select a tenant"
+      "pleaseSelectTenant": "Please select a region"
     },
     "published": "Published",
     "isCrawlable": "Allow search engines to crawl the site",
@@ -264,10 +264,10 @@
       "createUserFailed": "Failed to create user",
       "updateUserFailed": "Failed to update user",
       "deleteUserFailed": "Failed to delete user",
-      "loadTenantsFailed": "Failed to load tenants",
-      "createTenantFailed": "Failed to create tenant",
-      "updateTenantFailed": "Failed to update tenant",
-      "deleteTenantFailed": "Failed to delete tenant",
+      "loadTenantsFailed": "Failed to load regions",
+      "createTenantFailed": "Failed to create region",
+      "updateTenantFailed": "Failed to update region",
+      "deleteTenantFailed": "Failed to delete region",
       "loadDefaultLanguageFailed": "Failed to load default language",
       "updateDefaultLanguageFailed": "Failed to update default language",
       "updateMapSettingsFailed": "Failed to update map settings",
@@ -287,8 +287,8 @@
       "cannotDropOnChild": "Cannot drop a category on its own child",
       "categoryNotFound": "Category not found",
       "invalidCategoryIds": "Invalid category IDs",
-      "categoriesNotFound": "Some categories not found or don't belong to tenant",
-      "parentCategoriesNotFound": "Some parent categories not found or don't belong to tenant",
+      "categoriesNotFound": "Some categories not found or don't belong to region",
+      "parentCategoriesNotFound": "Some parent categories not found or don't belong to region",
       "oneOrMoreCategoriesNotFound": "One or more categories not found during update"
     },
     "validation": {
@@ -300,8 +300,8 @@
       "lastNameRequired": "Last name is required",
       "passwordRequired": "Password is required",
       "passwordMinLength": "Password must be at least 6 characters",
-      "tenantNameRequired": "Tenant name is required",
-      "tenantSlugRequired": "Tenant slug is required",
+      "tenantNameRequired": "Region name is required",
+      "tenantSlugRequired": "Region slug is required",
       "slugRequired": "Slug is required",
       "categoryRequired": "Category is required",
       "startDateRequired": "Start date is required",
@@ -315,7 +315,7 @@
       "deleteTown": "Are you sure you want to delete this town?",
       "deleteLegalPage": "Are you sure you want to delete this legal page?",
       "deleteUser": "Are you sure you want to delete this user? This action cannot be undone.",
-      "deleteTenant": "Are you sure you want to delete this tenant?",
+      "deleteTenant": "Are you sure you want to delete this region?",
       "changeRole": "Are you sure you want to change this user's role to {{role}}?",
       "deleteStaticPage": "Are you sure you want to delete this static page?",
       "deleteEvent": "Are you sure you want to delete this event?",
@@ -326,12 +326,12 @@
       "lastName": "Last Name",
       "bio": "Bio",
       "password": "Password",
-      "tenantSlug": "Tenant Slug",
-      "tenantName": "Tenant Name"
+      "tenantSlug": "Region Slug",
+      "tenantName": "Region Name"
     },
     "key": "Key",
     "content": "Content",
-    "selectTenantFirst": "Please select a tenant first",
+    "selectTenantFirst": "Please select a region first",
     "shortDescriptionPlaceholder": "Short description of the event",
     "startDate": "Start date",
     "endDate": "End date",
@@ -390,7 +390,7 @@
       "profileUpdatedSuccess": "Profile updated successfully!",
       "memberSince": "Member since",
       "lastUpdated": "Last updated",
-      "noTenantsAssigned": "No tenants assigned",
+      "noTenantsAssigned": "No regions assigned",
       "primary": "Primary",
       "twoFactorAuthentication": "Two-Factor Authentication"
     },
