--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -138,7 +138,7 @@
     "clickOrDragMarker": "Kattints vagy húzd a marker-t a helyszín beállításához",
     "userInformation": "Felhasználói információk",
     "role": "Szerepkör",
-    "noTenants": "Nincs elérhető bérlő",
+    "noTenants": "Nincs elérhető terület",
     "sessionExpiring": "Munkamenet lejár",
     "defaultLanguage": "Alapértelmezett nyelv",
     "defaultLanguageDescription": "Ez a nyelv lesz az alapértelmezett a public felületen és az admin felületen is.",
@@ -152,7 +152,7 @@
     "mapZoom": "Nagyítás",
     "mapZoomHint": "1 = legkisebb (világtérkép), 20 = legnagyobb (utca szint). Ajánlott: 10-15.",
     "singleTownHighZoomHint": "Egy település esetén nagyobb nagyítás (14-16) ajánlott, hogy a jelölők ne torlódjanak össze.",
-    "singleTenantMapSettingsDisabled": "Egy tenant esetén a térkép beállítások automatikusan a tenant adatai alapján kerülnek beállításra.",
+    "singleTenantMapSettingsDisabled": "Egy terület esetén a térkép beállítások automatikusan a terület adatai alapján kerülnek beállításra.",
     "mapSettingsUpdated": "Térkép beállítások frissítve.",
     "siteSettings": "Oldal beállítások",
     "siteSettingsDescription": "Állítsd be az oldal nevét, leírását és alapértelmezett SEO beállításait.",
@@ -206,8 +206,8 @@
       "editLegalPage": "Jogi oldal szerkesztése",
       "newUser": "Új felhasználó",
       "editUser": "Felhasználó szerkesztése",
-      "newTenant": "Új bérlő",
-      "editTenant": "Bérlő szerkesztése",
+      "newTenant": "Új terület",
+      "editTenant": "Terület szerkesztése",
       "newEvent": "Új esemény",
       "editEvent": "Esemény szerkesztése",
       "newStaticPage": "Új statikus oldal",
@@ -220,7 +220,7 @@
       "status": "Státusz",
       "actions": "Műveletek",
       "noData": "Nincs adat",
-      "pleaseSelectTenant": "Kérjük, válassz bérlőt"
+      "pleaseSelectTenant": "Kérjük, válassz területet"
     },
     "published": "Közzétéve",
     "isCrawlable": "Keresőmotorok indexelhetik az oldalt",
@@ -265,10 +265,10 @@
       "createUserFailed": "A felhasználó létrehozása sikertelen",
       "updateUserFailed": "A felhasználó frissítése sikertelen",
       "deleteUserFailed": "A felhasználó törlése sikertelen",
-      "loadTenantsFailed": "A bérlők betöltése sikertelen",
-      "createTenantFailed": "A bérlő létrehozása sikertelen",
-      "updateTenantFailed": "A bérlő frissítése sikertelen",
-      "deleteTenantFailed": "A bérlő törlése sikertelen",
+      "loadTenantsFailed": "A területek betöltése sikertelen",
+      "createTenantFailed": "A terület létrehozása sikertelen",
+      "updateTenantFailed": "A terület frissítése sikertelen",
+      "deleteTenantFailed": "A terület törlése sikertelen",
       "loadDefaultLanguageFailed": "Az alapértelmezett nyelv betöltése sikertelen",
       "updateDefaultLanguageFailed": "Az alapértelmezett nyelv frissítése sikertelen",
       "updateMapSettingsFailed": "A térkép beállítások frissítése sikertelen",
@@ -288,8 +288,8 @@
       "cannotDropOnChild": "Nem lehet egy kategóriát a saját gyermekére dobni",
       "categoryNotFound": "Kategória nem található",
       "invalidCategoryIds": "Érvénytelen kategória azonosítók",
-      "categoriesNotFound": "Egy vagy több kategória nem található vagy nem tartozik a bérlőhöz",
-      "parentCategoriesNotFound": "Egy vagy több szülő kategória nem található vagy nem tartozik a bérlőhöz",
+      "categoriesNotFound": "Egy vagy több kategória nem található vagy nem tartozik a területhez",
+      "parentCategoriesNotFound": "Egy vagy több szülő kategória nem található vagy nem tartozik a területhez",
       "oneOrMoreCategoriesNotFound": "Egy vagy több kategória nem található a frissítés során"
     },
     "validation": {
@@ -301,8 +301,8 @@
       "lastNameRequired": "A vezetéknév kötelező",
       "passwordRequired": "A jelszó kötelező",
       "passwordMinLength": "A jelszónak legalább 6 karakternek kell lennie",
-      "tenantNameRequired": "A bérlő neve kötelező",
-      "tenantSlugRequired": "A bérlő slug kötelező",
+      "tenantNameRequired": "A terület neve kötelező",
+      "tenantSlugRequired": "A terület slug kötelező",
       "slugRequired": "A slug kötelező",
       "startDateRequired": "A kezdés dátuma kötelező",
       "invalidImageUrl": "Érvénytelen kép URL. Csak http:// és https:// URL-ek engedélyezettek."
@@ -315,7 +315,7 @@
       "deleteTown": "Biztosan törölni szeretnéd ezt a települést?",
       "deleteLegalPage": "Biztosan törölni szeretnéd ezt a jogi oldalt?",
       "deleteUser": "Biztosan törölni szeretnéd ezt a felhasználót? Ez a művelet nem vonható vissza.",
-      "deleteTenant": "Biztosan törölni szeretnéd ezt a bérlőt?",
+      "deleteTenant": "Biztosan törölni szeretnéd ezt a területet?",
       "changeRole": "Biztosan meg szeretnéd változtatni a felhasználó szerepkörét {{role}}-ra?",
       "deleteStaticPage": "Biztosan törölni szeretnéd ezt a statikus oldalt?",
       "deleteEvent": "Biztosan törölni szeretnéd ezt az eseményt?",
@@ -326,12 +326,12 @@
       "lastName": "Vezetéknév",
       "bio": "Bio",
       "password": "Jelszó",
-      "tenantSlug": "Bérlő slug",
-      "tenantName": "Bérlő neve"
+      "tenantSlug": "Terület slug",
+      "tenantName": "Terület neve"
     },
     "key": "Kulcs",
     "content": "Tartalom",
-    "selectTenantFirst": "Kérjük, válassz először egy bérlőt",
+    "selectTenantFirst": "Kérjük, válassz először egy területet",
     "heroImage": "Hero kép",
     "urlPlaceholder": "URL",
     "accessDenied": "Hozzáférés megtagadva. Superadmin szerepkör szükséges.",
@@ -390,7 +390,7 @@
       "profileUpdatedSuccess": "Profil sikeresen frissítve!",
       "memberSince": "Tag",
       "lastUpdated": "Utolsó frissítés",
-      "noTenantsAssigned": "Nincs hozzárendelt bérlő",
+      "noTenantsAssigned": "Nincs hozzárendelt terület",
       "primary": "Elsődleges",
       "twoFactorAuthentication": "Kétfaktoros autentikáció"
     },
