redirect after logout, i18n modifications

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -392,6 +392,7 @@
       "memberSince": "Mitglied seit",
       "lastUpdated": "Zuletzt aktualisiert",
       "noTenantsAssigned": "Keine Gebiete zugewiesen",
+      "addTenants": "Gebiete hinzufügen...",
       "primary": "Primär",
       "twoFactorAuthentication": "Zwei-Faktor-Authentifizierung"
     },
