--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -217,7 +217,8 @@
       "newEvent": "Új esemény",
       "editEvent": "Esemény szerkesztése",
       "newStaticPage": "Új statikus oldal",
-      "editStaticPage": "Statikus oldal szerkesztése"
+      "editStaticPage": "Statikus oldal szerkesztése",
+      "addTenants": "Területek hozzáadása..."
     },
     "table": {
       "nameHu": "Név (HU)",
