event log feature

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -194,6 +194,10 @@
       "townsDesc": "Städte verwalten",
       "legalPages": "Rechtliche Seiten",
       "legalPagesDesc": "Rechtliche Seiten verwalten",
+      "staticPages": "Statische Seiten",
+      "staticPagesDesc": "Statische Seiten verwalten",
+      "eventLog": "Ereignisprotokoll",
+      "eventLogDesc": "Benutzeraktivitätsprotokolle anzeigen",
       "settings": "Einstellungen",
       "settingsDesc": "Einstellungen"
     },
@@ -415,6 +419,61 @@
     "categoryBlog": "Blog",
     "categoryTudastar": "Wissensdatenbank",
     "categoryInfok": "Info",
+    "eventLog": "Ereignisprotokoll",
+    "eventLog.description": "Benutzeraktivitätsprotokolle anzeigen und verwalten",
+    "eventLog.filters": "Filter",
+    "eventLog.filterTenant": "Gebiet",
+    "eventLog.filterUser": "Benutzer",
+    "eventLog.filterAction": "Aktion",
+    "eventLog.filterEntityType": "Entitätstyp",
+    "eventLog.filterStartDate": "Startdatum",
+    "eventLog.filterEndDate": "Enddatum",
+    "eventLog.allTenants": "Alle Gebiete",
+    "eventLog.allUsers": "Alle Benutzer",
+    "eventLog.allActions": "Alle Aktionen",
+    "eventLog.allEntityTypes": "Alle Entitätstypen",
+    "eventLog.export": "CSV exportieren",
+    "eventLog.exporting": "Exportieren...",
+    "eventLog.exportSuccess": "Ereignisprotokolle erfolgreich exportiert",
+    "eventLog.delete": "Protokolle löschen",
+    "eventLog.deleting": "Löschen...",
+    "eventLog.deleteConfirm": "Möchten Sie die gefilterten Ereignisprotokolle wirklich löschen?",
+    "eventLog.deleteSuccess": "{{count}} Ereignisprotokoll(e) gelöscht",
+    "eventLog.resetFilters": "Filter zurücksetzen",
+    "eventLog.timestamp": "Zeitstempel",
+    "eventLog.tenant": "Gebiet",
+    "eventLog.user": "Benutzer",
+    "eventLog.action": "Aktion",
+    "eventLog.entityType": "Entitätstyp",
+    "eventLog.noLogs": "Keine Ereignisprotokolle gefunden",
+    "eventLog.showing": "Anzeigen",
+    "eventLog.of": "von",
+    "eventLog.previous": "Vorherige",
+    "eventLog.next": "Nächste",
+    "eventLog.actions": {
+      "create": "Erstellen",
+      "update": "Aktualisieren",
+      "delete": "Löschen",
+      "login": "Anmelden",
+      "logout": "Abmelden"
+    },
+    "eventLog.entityTypes": {
+      "place": "Ort",
+      "event": "Veranstaltung",
+      "category": "Kategorie",
+      "tag": "Tag",
+      "priceBand": "Preisklasse",
+      "town": "Stadt",
+      "user": "Benutzer",
+      "tenant": "Gebiet",
+      "legalPage": "Rechtliche Seite",
+      "staticPage": "Statische Seite"
+    },
+    "errors": {
+      "loadEventLogsFailed": "Ereignisprotokolle konnten nicht geladen werden",
+      "exportFailed": "Export fehlgeschlagen",
+      "deleteFailed": "Löschen fehlgeschlagen"
+    },
     "errors": {
       "loadStaticPagesFailed": "Statische Seiten konnten nicht geladen werden",
       "createStaticPageFailed": "Statische Seite konnte nicht erstellt werden",
