--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -194,6 +194,10 @@
       "townsDesc": "Manage towns",
       "legalPages": "Legal Pages",
       "legalPagesDesc": "Manage legal pages",
+      "staticPages": "Static Pages",
+      "staticPagesDesc": "Manage blog, knowledge base and info pages",
+      "eventLog": "Event Log",
+      "eventLogDesc": "View user activity logs",
       "settings": "Settings",
       "settingsDesc": "Settings"
     },
@@ -414,7 +418,60 @@
     "categoryBlog": "Blog",
     "categoryTudastar": "Knowledge Base",
     "categoryInfok": "Info",
+    "eventLog": "Event Log",
+    "eventLog.description": "View and manage user activity logs",
+    "eventLog.filters": "Filters",
+    "eventLog.filterTenant": "Tenant",
+    "eventLog.filterUser": "User",
+    "eventLog.filterAction": "Action",
+    "eventLog.filterEntityType": "Entity Type",
+    "eventLog.filterStartDate": "Start Date",
+    "eventLog.filterEndDate": "End Date",
+    "eventLog.allTenants": "All Tenants",
+    "eventLog.allUsers": "All Users",
+    "eventLog.allActions": "All Actions",
+    "eventLog.allEntityTypes": "All Entity Types",
+    "eventLog.export": "Export CSV",
+    "eventLog.exporting": "Exporting...",
+    "eventLog.exportSuccess": "Event logs exported successfully",
+    "eventLog.delete": "Delete Logs",
+    "eventLog.deleting": "Deleting...",
+    "eventLog.deleteConfirm": "Are you sure you want to delete the filtered event logs?",
+    "eventLog.deleteSuccess": "Deleted {{count}} event log(s)",
+    "eventLog.resetFilters": "Reset Filters",
+    "eventLog.timestamp": "Timestamp",
+    "eventLog.tenant": "Tenant",
+    "eventLog.user": "User",
+    "eventLog.action": "Action",
+    "eventLog.entityType": "Entity Type",
+    "eventLog.noLogs": "No event logs found",
+    "eventLog.showing": "Showing",
+    "eventLog.of": "of",
+    "eventLog.previous": "Previous",
+    "eventLog.next": "Next",
+    "eventLog.actions": {
+      "create": "Create",
+      "update": "Update",
+      "delete": "Delete",
+      "login": "Login",
+      "logout": "Logout"
+    },
+    "eventLog.entityTypes": {
+      "place": "Place",
+      "event": "Event",
+      "category": "Category",
+      "tag": "Tag",
+      "priceBand": "Price Band",
+      "town": "Town",
+      "user": "User",
+      "tenant": "Tenant",
+      "legalPage": "Legal Page",
+      "staticPage": "Static Page"
+    },
     "errors": {
+      "loadEventLogsFailed": "Failed to load event logs",
+      "exportFailed": "Failed to export",
+      "deleteFailed": "Failed to delete",
       "loadStaticPagesFailed": "Failed to load static pages",
       "createStaticPageFailed": "Failed to create static page",
       "updateStaticPageFailed": "Failed to update static page",
