--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -194,6 +194,8 @@
       "legalPagesDesc": "Jogi oldalak kezelése",
       "staticPages": "Statikus oldalak",
       "staticPagesDesc": "Blog, tudástár és infó oldalak kezelése",
+      "eventLog": "Esemény napló",
+      "eventLogDesc": "Felhasználói tevékenység naplók megtekintése",
       "settings": "Beállítások",
       "settingsDesc": "Beállítások"
     },
@@ -413,7 +415,62 @@
     "category": "Kategória",
     "categoryBlog": "Blog",
     "categoryTudastar": "Tudástár",
-    "categoryInfok": "Infók"
+    "categoryInfok": "Infók",
+    "eventLog": "Esemény napló",
+    "eventLog.description": "Felhasználói tevékenység naplók megtekintése és kezelése",
+    "eventLog.filters": "Szűrők",
+    "eventLog.filterTenant": "Terület",
+    "eventLog.filterUser": "Felhasználó",
+    "eventLog.filterAction": "Művelet",
+    "eventLog.filterEntityType": "Entitás típus",
+    "eventLog.filterStartDate": "Kezdő dátum",
+    "eventLog.filterEndDate": "Befejező dátum",
+    "eventLog.allTenants": "Összes terület",
+    "eventLog.allUsers": "Összes felhasználó",
+    "eventLog.allActions": "Összes művelet",
+    "eventLog.allEntityTypes": "Összes entitás típus",
+    "eventLog.export": "CSV exportálás",
+    "eventLog.exporting": "Exportálás...",
+    "eventLog.exportSuccess": "Az esemény naplók sikeresen exportálva",
+    "eventLog.delete": "Naplók törlése",
+    "eventLog.deleting": "Törlés...",
+    "eventLog.deleteConfirm": "Biztosan törölni szeretnéd a szűrt esemény naplókat?",
+    "eventLog.deleteSuccess": "{{count}} esemény napló törölve",
+    "eventLog.resetFilters": "Szűrők törlése",
+    "eventLog.timestamp": "Időbélyeg",
+    "eventLog.tenant": "Terület",
+    "eventLog.user": "Felhasználó",
+    "eventLog.action": "Művelet",
+    "eventLog.entityType": "Entitás típus",
+    "eventLog.noLogs": "Nincs esemény napló",
+    "eventLog.showing": "Megjelenítve",
+    "eventLog.of": "összesen",
+    "eventLog.previous": "Előző",
+    "eventLog.next": "Következő",
+    "eventLog.actions": {
+      "create": "Létrehozás",
+      "update": "Frissítés",
+      "delete": "Törlés",
+      "login": "Bejelentkezés",
+      "logout": "Kijelentkezés"
+    },
+    "eventLog.entityTypes": {
+      "place": "Hely",
+      "event": "Esemény",
+      "category": "Kategória",
+      "tag": "Címke",
+      "priceBand": "Ár sáv",
+      "town": "Település",
+      "user": "Felhasználó",
+      "tenant": "Terület",
+      "legalPage": "Jogi oldal",
+      "staticPage": "Statikus oldal"
+    },
+    "errors": {
+      "loadEventLogsFailed": "Az esemény naplók betöltése sikertelen",
+      "exportFailed": "Az exportálás sikertelen",
+      "deleteFailed": "A törlés sikertelen"
+    }
   },
   "validation": {
     "required": "Kötelező mező",
